--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_btn">#F38181</color>
+    <color name="color_btn_dark">#F38181</color>
+    <color name="colorAccent">#FCE38A</color>
+    <color name="cardViewBackground">#EAFFD0</color>
+    <color name="imageViewBackground">#95E1D3</color>
 </resources>
